# Hex

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml
core/: CMakeLists.txt
core/bindings/: pybind.cpp
core/include/: DSU.hpp  HexAI.hpp  HexBoard.hpp
core/src/: HexAI.cpp  HexAITest.cpp  HexBoard.cpp
gui/: hex_defs.py  hex_draw.py  hex_game.py  hex_gui.py  hex_settings.py  hex_sfx.py  hex_states.py  main.py  pyproject.toml
gui/app/: config.py  defs.py
gui/app/engine/: manager.py
gui/app/ui/: __init__.py  renderer.py  states.py  widgets.py
gui/app/utils/: __init__.py  sound.py
resources/: settings.json
